--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ NEXT_PUBLIC_PROJECTID=
 NEXT_PUBLIC_STORAGEBUCKET=
 NEXT_PUBLIC_MESSAGINGSENDERID=
 NEXT_PUBLIC_APPID=
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
+NEXT_PUBLIC_RECAPTCHA_SECRET_KEY=
