--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-separator": "^1.0.3",
@@ -23,12 +25,14 @@
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "shadcn-ui": "^0.4.1",
     "sonner": "^1.2.0",
     "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
@@ -43,6 +47,6 @@
     "eslint-config-next": "^14.0.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2"
+    "typescript": "5.3.2"
   }
 }
