--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "firebase": "^10.7.0",
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.293.0",
-    "next": "14.0.3",
+    "next": "^14.0.3",
+    "next-navigation": "^1.0.6",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.48.2",
     "shadcn-ui": "^0.4.1",
     "sonner": "^1.2.0",
@@ -38,10 +41,10 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
-    "@types/firebase": "^3.2.1",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "@types/react-google-recaptcha": "^2.1.8",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.3",
