--- a/public/pwa/manifest.json
+++ b/public/pwa/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "GDSC Farmingdale | Links",
-    "short_name": "GDSC FSC Links",
-    "theme_color": "#66A266",
-    "background_color": "#006400",
+    "name": "next-firebase",
+    "short_name": "next-firebase",
+    "theme_color": "#FFA000",
+    "background_color": "#F57C00",
     "start_url": "/",
-    "description": "This web application is a means to keep up to date with what GDSC FSC is doing, and will include upcoming events, and serve as a central hub for all our domains.",
+    "description": "Next.js + Firebase starter kit.",
     "scope": "/",
     "dir": "ltr",
     "orientation": "portrait-primary",
